import org.gradle.api.tasks.JavaExec
import org.gradle.api.tasks.compile.JavaCompile
import org.gradle.api.tasks.testing.Test

plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'io.helidon.nima.webserver:helidon-nima-webserver:4.0.0-M1'

    implementation 'com.google.inject:guice:7.0.0'
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation 'ch.qos.logback:logback-core:1.4.11'
    implementation 'ch.qos.logback:logback-classic:1.4.11'
    implementation 'org.slf4j:slf4j-api:2.0.7'


    testImplementation 'io.helidon.nima.testing.junit5:helidon-nima-testing-junit5-webserver:4.0.0-M1'
}

testing {
    suites {
        test {
            useJUnitJupiter('5.9.2')
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

application {
    mainClass = 'com.beyondcivil.pub.helidon4M1jdk20.ServiceMain'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add("--enable-preview")
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}
